# north9

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/commands/: compact.md  restore.md  save.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmark/: results.json  run.py
src/north9/: __init__.py  __main__.py  mcp.py
src/north9/autopsy/: __init__.py  core.py  mcp.py
src/north9/budget/: __init__.py  core.py  mcp.py
src/north9/chain/: __init__.py  __main__.py  core.py  mcp.py
src/north9/forge/: __init__.py  core.py  mcp.py
src/north9/gate/: __init__.py  core.py  mcp.py
src/north9/grid/: __init__.py  __main__.py  core.py  mcp.py
src/north9/index/: __init__.py  core.py  mcp.py
src/north9/lens/: __init__.py  core.py  mcp.py
src/north9/memory/: __init__.py  core.py
src/north9/prism/: __init__.py  capture.py  cli.py  diff.py  replay.py  report.py  session.py
src/north9/sandbox/: __init__.py  core.py
src/north9/scout/: __init__.py  core.py  mcp.py
src/north9/sift/: __init__.py  core.py  mcp.py
src/north9/vault/: __init__.py  core.py  mcp.py
tests/: test_integration.py  test_memory.py  test_sandbox.py  test_security.py
tests/autopsy/: test_autopsy.py
tests/budget/: test_budget.py
tests/chain/: test_chain.py
tests/forge/: test_forge.py
tests/gate/: test_gate.py
tests/grid/: test_grid.py
tests/index/: test_index.py
tests/lens/: test_lens.py
tests/prism/: test_capture.py  test_diff.py  test_replay.py  test_session.py
tests/scout/: test_scout.py
tests/sift/: test_sift.py
tests/vault/: test_vault.py
