[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "north9"
version = "0.1.0"
description = "Sandboxed execution + persistent memory for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "North9 Labs", email = "oss@north9.io" }]
keywords = [
    "ai", "agent", "sandbox", "docker", "context", "compression",
    "memory", "llm", "anthropic", "openai", "mcp", "autonomous",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
openai    = ["openai>=1.0"]
all       = ["anthropic>=0.20", "openai>=1.0"]
dev       = [
    "pytest>=7",
    "pytest-mock>=3",
    "anthropic>=0.20",
    "ruff",
    "mypy",
]

[project.scripts]
north9 = "north9.mcp:main"

[project.urls]
Homepage   = "https://github.com/North9-Labs/north9"
Repository = "https://github.com/North9-Labs/north9"
Issues     = "https://github.com/North9-Labs/north9/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
north9 = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: requires Docker to be running",
]
