[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "north9"
version = "0.2.0"
description = "The complete runtime for autonomous AI agents — sandbox, memory, observability, policy, and more"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "North9 Labs", email = "oss@north9.org" }]
keywords = [
    "ai", "agent", "sandbox", "docker", "context", "compression",
    "memory", "llm", "anthropic", "openai", "mcp", "autonomous",
    "observability", "policy", "eval", "budget", "vault", "tracing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "mcp>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "cryptography>=41.0,<46.0",
    "click>=8.0,<9.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
openai    = ["openai>=1.0"]
all       = ["anthropic>=0.20", "openai>=1.0"]
dev       = [
    "pytest>=7",
    "pytest-mock>=3",
    "pytest-asyncio>=0.21",
    "anthropic>=0.20",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[project.scripts]
north9        = "north9.mcp:main"
north9-budget = "north9.budget.mcp:main"
north9-chain  = "north9.chain.mcp:main"
north9-forge  = "north9.forge.mcp:main"
north9-gate   = "north9.gate.mcp:main"
north9-grid   = "north9.grid.mcp:main"
north9-index  = "north9.index.mcp:main"
north9-lens   = "north9.lens.mcp:main"
north9-scout  = "north9.scout.mcp:main"
north9-sift   = "north9.sift.mcp:main"
north9-vault    = "north9.vault.mcp:main"
north9-autopsy  = "north9.autopsy.mcp:main"
prism           = "north9.prism.cli:main"

[project.urls]
Homepage   = "https://github.com/North9-Labs/north9"
Repository = "https://github.com/North9-Labs/north9"
Issues     = "https://github.com/North9-Labs/north9/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
north9 = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: requires Docker to be running",
]
testpaths = ["tests"]
